--- a/ChatBot_final/index.html
+++ b/ChatBot_final/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <title>chatbot</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>chatbot</title>
       
 
   
