--- a/ChatBot_final/index.html
+++ b/ChatBot_final/index.html
@@ -20,7 +20,7 @@
   WebChat.default.init({
         selector: "#webchat",
         initPayload: "/greet",	
-        socketUrl: "http://localhost:5005/",
+        socketUrl: "http://donovittle.holepunch.io/",
         socketPath: "/socket.io/",
         title: "Vihi",
         subtitle: "I'm here to solve your queries...",
